Fix blank Alt-Tab window previews under SingleProcessMash

The mirror view size was zero because it wasn't correctly looking up
the widget.

Bug: 921224
Test: added to ash_unittests
Change-Id: Ic7c09ffa92ecf345030758aa89ef7ec9aeb8d7bb
Reviewed-on: https://chromium-review.googlesource.com/c/1422697
Reviewed-by: Evan Stade <estade@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624282}
Former-commit-id: 2001dc07f1170286479774029c2bb725d09afddd